--- a/backend/package.json
+++ b/backend/package.json
@@ -2,5 +2,16 @@
   "dependencies": {
     "graphql-yoga": "^1.18.3",
     "prisma-client-lib": "^1.34.10"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
