--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "apollo-cache-control": "^0.1.1",
     "apollo-link": "^1.2.14",
+    "apollo-server": "^2.13.0",
     "apollo-server-core": "^1.4.0",
     "apollo-server-express": "^1.4.0",
     "apollo-server-lambda": "^1.3.6",
@@ -12,6 +13,7 @@
     "apollo-tracing": "^0.1.4",
     "apollo-upload-server": "^7.1.0",
     "apollo-utilities": "^1.3.3",
+    "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
     "prisma-client-lib": "^1.34.10"
   },
